Fix party actor type label alignment

--- a/src/styles/actor/party/_index.scss
+++ b/src/styles/actor/party/_index.scss
@@ -90,7 +90,7 @@
                 font-size: var(--font-size-32);
             }
 
-            .type {
+            .actor-type {
                 grid-area: type;
                 text-align: end;
             }
